<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:errorview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="?colorPrimary"
        android:minHeight="?actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_ip_address_is"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/externalIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="128.42.34.54" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <tr.xip.errorview.ErrorView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                errorview:ev_errorSubtitle="@string/no_connection_subtitle"
                errorview:ev_errorTitle="@string/no_connection"
                errorview:ev_showRetryButton="false"
                errorview:ev_showTitle="true" />

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/more_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.yoavst.whatismyip.ItemView
                    android:id="@+id/connectionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" />

                <com.yoavst.whatismyip.ItemView
                    android:id="@+id/internalIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <com.yoavst.whatismyip.ItemView
                    android:id="@+id/hostName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <com.yoavst.whatismyip.ItemView
                    android:id="@+id/dns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <com.yoavst.whatismyip.ItemView
                    android:id="@+id/gateway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:layout_marginTop="-4dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="-28dp"
        android:background="@drawable/refresh_background"
        android:contentDescription="@string/refresh"
        android:elevation="5dp"
        android:src="@drawable/ic_refresh"
        android:textSize="40sp" />
</RelativeLayout>